--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   "pkg": {
     "scripts": "dist/**/*.js",
     "targets": [
-      "node16-linux-x64",
-      "node16-win-x64"
+      "node16-alpine-x64"
     ],
     "outputPath": "bin",
     "options": [
